--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="keywords" content="个人简历">
     <meta name="description" content="自制个人简历">
     <title>个人简历</title>
-    <link rel="stylesheet/less" type="text/less" href="./css/index.less">
+    <!-- <link rel="stylesheet/less" type="text/less" href="./css/index.less"> -->
     <link rel="stylesheet" type="text/css" href="./css/swiper-3.4.2.min.css">
+    <link rel="stylesheet" href="./css/index.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css"> -->
-    <script src="js/less-2.5.3.min.js"></script>
+    <!-- <script src="js/less-2.5.3.min.js"></script> -->
     <script src="js/prefixfree.min.js"></script><!--增加前缀-->
 </head>
 <body>
